samba (3.9.0+SVN12692-1) UNRELEASED; urgency=low

  * First upload to Debian main.
  * Remove a few unused files in the packaging.
  * Rename samba-server package to just samba, for consistency with the
    Samba 3 packaging.
  * Be more explicit about what happens to the administrator password the
    user enters.
  * Change SOURCEPATH in debian/rules to reflect that we now have the
    packaging in debian/, not packaging/debian/. This will have to be reverted
    whenever upstream syncs with us.
  * Attempt to upgrade from Samba 3 if that's what the user tries to do.
    * Copy upgrade script into /usr/lib/samba/setup.
    * Check for upgrade from << 3.9.0 in config, and ask the user for upgrade
      if relevant.
    * Check for upgrade from << 3.9.0 in postinst, and upgrade if the user
      wished to.
  * Only provision in samba.postinst if we're being called with "configure".
  * Make samba-client Replaces/Conflicts smbclient.
  * Rename samba-swat to swat, and add a dependency from swat to samba.
  * Change debhelper compatibility level to 5.

 -- Steinar H. Gunderson <sesse@debian.org>  Tue,  3 Jan 2006 18:29:10 +0100

samba (3.9.0+SVN12395-1) unstable; urgency=low

  * New snapshot, drop 4 suffix

 -- Jelmer Vernooij <jelmer@samba.org>  Tue, 20 Dec 2005 13:38:26 +0100

samba4 (3.9.0+SVN12312-1) unstable; urgency=low

  * New upstream snapshot.

 -- Jelmer Vernooij <jelmer@samba.org>  Mon, 27 Jun 2005 11:25:57 +0200

samba4 (3.9.0-SVN-build-6710-1) unstable; urgency=low

  * Newer upstream version

 -- Jelmer Vernooij <jelmer@samba.org>  Thu, 12 May 2005 14:04:05 +0200

samba4 (3.9.0-SVN-build-655-1) unstable; urgency=low

  * Initial release.

 -- Jelmer Vernooij <jelmer@samba.org>  Thu, 13 May 2004 01:38:41 +0200