@@ -19,8 +19,9 @@ samba (3.9.0+SVN12692-1) UNRELEASED; urgency=low
   * Make samba-client Replaces/Conflicts smbclient.
   * Rename samba-swat to swat, and add a dependency from swat to samba.
   * Change debhelper compatibility level to 5.
+  * Remove leftover, unused init.d script from debmake. 
 
- -- Steinar H. Gunderson <sesse@debian.org>  Tue,  3 Jan 2006 18:29:10 +0100
+ -- Steinar H. Gunderson <sesse@debian.org>  Tue,  3 Jan 2006 22:43:04 +0100
 
 samba (3.9.0+SVN12395-1) unstable; urgency=low
 
